# solace-platform-mcp

./: .fossa.yml  .gitignore  CONTRIBUTING.md  README.md
solace-event-portal-designer-mcp/: README.md  THIRD-PARTY-LICENSES  pyproject.toml  requirements.txt
solace-event-portal-designer-mcp/examples/: mcp_config_example.json  multi_region_example.json
solace-event-portal-designer-mcp/src/solace_event_portal_designer_mcp/: __init__.py  server.py
solace-event-portal-designer-mcp/src/solace_event_portal_designer_mcp/data/: ep-designer.json
solace-event-portal-designer-mcp/tests/: test_customize_components.py
solace-monitoring-mcp-server/: README.md  install.sh  solace_monitoring_mcp_server.py
solace-monitoring-mcp-server/tests/: test_data.py  test_mcp_server.py
terraform/: .gitignore  lambda_handler.py  main.tf
